# Project_10_2

./: .gitignore  main.py  pyproject.toml
tests/: conftest.py  test_calculate_taxes.py
